--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -168,7 +168,7 @@
                         <input type="text" placeholder="התחל הקלדה .." aria-label="manager" matInput
                             [formControl]="myControl" [matAutocomplete]="auto">
                         <mat-autocomplete #auto="matAutocomplete">
-                            <mat-option *ngFor="let option of filteredOptions | async" [value]="option.id">
+                            <mat-option *ngFor="let option of filteredOptions | async" value="{{option.firstname}} {{option.lastname}}">
                                 {{option.firstname}} {{option.lastname}}
                             </mat-option>
                         </mat-autocomplete>
