--- a/src/app/nurses-dashboard/nurses-dashboard.component.css
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.css
@@ -52,3 +52,36 @@ table {
   .example-element-description-attribution {
     opacity: 0.8;
   }
+  @media print {
+    #to-print {
+        display: block;
+    }
+    .pl-35 {
+        padding-left: 35px;
+    }
+    body {
+        padding: 0 !important;
+        background: none !important;
+    }
+    #sendSmsBtn,
+    footer,
+    #page-toshow,
+    
+    #form-html-templet .card-header * {
+        padding: 0 !important;
+    }
+    .card {
+        padding: 0 !important;
+        border: 0;
+    }
+    footer[_ngcontent-pxw-c3] {
+        display: none !important;
+    }
+
+    button {
+        display: none !important;
+    }
+    td label {
+        display: none;
+    }
+}
