--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,11 @@ footer {
 .top-zindex {
     z-index: 9999999999999999 !important;
   }
- 
+  .cdk-overlay-connected-position-bounding-box .cdk-overlay-pane,
+  .cdk-overlay-connected-position-bounding-box{
+    /* position: relative; */
+    z-index: 9999999999999999999;
+  }
 .m-5 {
     margin: 1rem 0;
 }
