--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -1,6 +1,13 @@
 <form dir="rtl" class="form col" [formGroup]="ReportGroup">
     <div class="modal-header text-right">
-        <h4 class="modal-title text-center">דווח</h4>
+        <div class="row mt-3">
+            <div class="col-6 text-center"><u>תאריך נוכחי : {{date2}}</u>
+            </div>
+            <div class="col-4 text-center">
+                <u>שעה נוכחית : {{time2}}</u>
+            </div>
+        </div>
+        <!-- <h4 class="modal-title text-center">דווח</h4> -->
         <button type="button" class="close" aria-label="Close" (click)="closeModal()">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -11,7 +18,7 @@
                 <div class="form-group">
                     <mat-form-field>
                         <input matInput autocomplete="off" class="form-control" formControlName="ReportTitle"
-                            placeholder="נושא" type="text" [disabled]="ifDisabled" />
+                            placeholder="נושא" type="text" />
                     </mat-form-field>
                 </div>
             </div>
@@ -27,10 +34,10 @@
                     <mat-form-field appearance="fill">
                         <mat-label>מחלקה</mat-label>
                         <input type="text" aria-label="department" matInput [formControl]="departmentfilter"
-                            [matAutocomplete]="auto2" [disabled]="ifDisabled">
+                            [matAutocomplete]="auto2">
                         <mat-autocomplete #auto2="matAutocomplete">
-                            <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Depart_Name">
-                                {{dept.Depart_Name}}
+                            <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name">
+                                {{dept.Dept_Name}}
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
@@ -40,7 +47,7 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>קטיגוריה</mat-label>
-                        <mat-select formControlName="ReportCategory" [disabled]="ifDisabled">
+                        <mat-select formControlName="ReportCategory">
                             <mat-option *ngFor="let cat of all_categories_filter" [value]="cat.Cat_Name">
                                 {{cat.Cat_Name}}
                             </mat-option>
@@ -52,7 +59,7 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>תת קטיגוריה</mat-label>
-                        <mat-select formControlName="ReportSubCategory" [disabled]="ifDisabled">
+                        <mat-select formControlName="ReportSubCategory">
                             <mat-option *ngFor="let tp of subCategory" [value]="tp.SubCat_Name">
                                 {{tp.SubCat_Name}}
                             </mat-option>
@@ -60,7 +67,7 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col">
+            <!-- <div class="col">
                 <div class="form-group">
                     <mat-form-field appearance="fill">
                         <input matInput placeholder="תאריך לביצוע" formControlName="ReportSchudledDate"
@@ -71,28 +78,29 @@
                     </mat-form-field>
                 </div>
 
-            </div>
+            </div> -->
         </div>
         <div class="row">
-            <div class="col">
+            <!-- <div class="col">
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>עדיפות</mat-label>
-                        <mat-select formControlName="ReportPriority" [disabled]="ifDisabled">
+                        <mat-select formControlName="ReportPriority">
                             <mat-option *ngFor="let pr of priority" [value]="pr.value">
                                 {{pr.viewValue}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
-            </div>
+            </div> -->
             <div class="col">
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>משמרת</mat-label>
-                        <mat-select formControlName="ReportShift" [disabled]="ifDisabled">
+                        <input matInput class="form-control" formControlName="ReportShift" type="text" />
+                        <!-- <mat-select formControlName="ReportShift">
                             <mat-option *ngFor="let sh of shift" [value]="sh.value"> {{sh.viewValue}} </mat-option>
-                        </mat-select>
+                        </mat-select> -->
                     </mat-form-field>
                 </div>
             </div>
@@ -118,7 +126,7 @@
             </div>
         </div>
     </div>
-    <div class="modal-footer text-left">
+    <div class="modal-footer text-left" *ngIf="creator || reportID == '0'">
         <button matTooltip="שמירה" class="btn btn-outline-dark ml-4" color="primary" (click)="onSubmit()" type="submit"
             mat-raised-button>
             <span class="material-icons">
