--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -187,7 +187,7 @@
 
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row" id="toolTipStyle" matTooltip="{{row.ContentToShow}}" ></mat-row>
     </mat-table>
     <button (click)="openDialogToManageEmail(0,0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"
         *ngIf="UserName == 'matias'" matTooltip="הוספת פנייה חדשה"><i class="material-icons">add</i></button>
