--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -97,7 +97,7 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
-            <li class="nav-item" *ngIf="_nursesSystem">
+            <li class="nav-item">
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
@@ -106,12 +106,9 @@
                         </mat-expansion-panel-header>
                         <ul>
 
-                            <li class="nav-item" *ngIf="_nursesSystem">
+                            <li class="nav-item">
                                 <a class="nav-link" routerLink="nursereportsystem">כניסה</a>
                             </li>
-                            <!-- <li class="nav-item" *ngIf="_shoEmergincyCall">
-                                <a class="nav-link" routerLink="emergencycallgroups">אזעקת חירום</a>
-                            </li> -->
                         </ul>
                     </mat-expansion-panel>
                 </mat-accordion>
@@ -269,6 +266,21 @@
                         <ul>
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="emailsdashboard">דאשבורד פניות</a>
+                            </li>
+                        </ul>
+                    </mat-expansion-panel>
+                </mat-accordion>
+            </li>
+            <li class="nav-item">
+                <mat-accordion>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title> תמחור מרפאות </mat-panel-title>
+                            <mat-panel-description> </mat-panel-description>
+                        </mat-expansion-panel-header>
+                        <ul>
+                            <li class="nav-item">
+                                <a class="nav-link" routerLink="clinicspricing">רופאים</a>
                             </li>
                         </ul>
                     </mat-expansion-panel>
