--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -7,14 +7,14 @@
                     <div dir="rtl" class="card-body">
                         <form class="form" [formGroup]="searchReportsGroup">
                             <div class="row">
-                                <div class="col-12">
+                                <!-- <div class="col-12">
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input matInput autocomplete="off" placeholder="נושא דווח"
                                                 formControlName="OpenText" />
                                         </mat-form-field>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
@@ -30,15 +30,15 @@
                                 </div>
                                 <div class="col">
                                     <div class="form-group lh-37">
-                                        <mat-form-field>
-                                            <mat-label>קטיגוריה</mat-label>
-                                            <mat-select formControlName="ReportCategory">
-                                                <mat-option [value]="''">הכל</mat-option>
-                                                <mat-option *ngFor="let cat of all_categories_filter"
-                                                    [value]="cat.Cat_Name">
-                                                    {{cat.Cat_Name}}
+                                        <mat-form-field appearance="fill">
+                                            <mat-label>מחלקה</mat-label>
+                                            <input type="text" aria-label="department" matInput [formControl]="departmentfilter"
+                                                [matAutocomplete]="auto2">
+                                            <mat-autocomplete #auto2="matAutocomplete">
+                                                <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name">
+                                                    {{dept.Dept_Name}}
                                                 </mat-option>
-                                            </mat-select>
+                                            </mat-autocomplete>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -114,7 +114,6 @@
             </div>
         </div>
     </div>
-    <br />
     <hr />
 
     <div dir="rtl" class="container-fluid pb-60">
@@ -133,17 +132,17 @@
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef style="text-align: center;"> סטטוס דווח </th>
                 <td mat-cell *matCellDef="let element"
-                    [style.background]="element.status == 'טופל' ? 'darkseagreen': element.status == 'בטיפול' ? 'darkgrey': element.status == 'חדש' ? '' : 'firebrick'">
+                    [style.background]="element.status == 'טופל' ? 'forestgreen': 'darkgrey'">
                     {{element.status}} </td>
             </ng-container>
 
             <ng-container matColumnDef="edit">
                 <th mat-header-cell *matHeaderCellDef style="text-align: center;"> עריכת דווח </th>
-                <td mat-cell *matCellDef="let element"> <button matTooltip="עריכה" mat-raised-button color="primary"
+                <td mat-cell *matCellDef="let element"> <button matTooltip="עריכה" style="border-radius: 18px 0px 18px 0px;" mat-raised-button color="primary"
                         (click)="fillReportDialog(element.reportID)"><span class="material-icons">
                             edit
                         </span></button>
-                    <button matTooltip="היסטוריית שינויים" mat-raised-button style="margin-right: 5px;" color="primary"
+                    <button matTooltip="היסטוריית שינויים" mat-raised-button style="margin-right: 5px;border-radius: 0px 18px 0px 18px;" color="primary"
                         *ngIf="UserName == 'adahabre'" (click)="displayHistoryDialog(element.reportID)"><span
                             class="material-icons">
                             history
@@ -153,7 +152,7 @@
 
             <ng-container matColumnDef="reply">
                 <th mat-header-cell *matHeaderCellDef style="text-align: center;"> הוסף תגובה לדווח </th>
-                <td mat-cell *matCellDef="let element"> <button matTooltip="התכתבות" mat-raised-button color="primary"
+                <td mat-cell *matCellDef="let element"> <button matTooltip="התכתבות" style="border-radius: 0px 10px 10px 10px;" mat-raised-button color="primary"
                         (click)="addReply(element.reportID)"><span class="material-icons">
                             reply
                         </span></button></td>
@@ -163,17 +162,23 @@
                 <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
                     <div class="example-element-detail"
                         [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                        <div class="example-element-diagram mr-5">
-                            <div class="example-element-position"> תאריך עדכון אחרון - {{element.updateDate}}</div>
-                            <div class="example-element-symbol"> משמרת - {{element.shift}} </div>
-                            <div class="example-element-weight"> עדיפות - <strong
-                                    style="font-weight: bold;">{{element.priority}}</strong> </div>
-                            <div class="example-element-name"> שם מדווח - {{element.userFullName}} </div>
+                        <div class="col-3">
+                            <div class="example-element-diagram mr-5" style="font-size: inherit;">
+                                <div class="example-element-position"> תאריך עדכון אחרון - {{element.updateDate}}</div>
+                                <div class="example-element-symbol"> משמרת - {{element.shift}} </div>
+                                <!-- <div class="example-element-weight"> עדיפות - <strong
+                                        style="font-weight: bold;">{{element.priority}}</strong> </div> -->
+                                <div class="example-element-name"> שם מדווח - {{element.userFullName}} </div>
+                            </div>
                         </div>
-                        <div class="example-element-description">
-                            <span class="example-element-description-attribution"> תוכן הדווח -- </span>
-                            {{element.description}}
+                        
+                        <div class="col-9">
+                            <div class="example-element-description">
+                                <span class="example-element-description-attribution"> תוכן הדווח -- </span>
+                                {{element.description}}
+                            </div>
                         </div>
+                        
                     </div>
                 </td>
             </ng-container>
@@ -181,7 +186,7 @@
             <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
             <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
                 [class.example-expanded-row]="expandedElement === element"
-                (click)="expandedElement = expandedElement === element ? null : element">
+                (click)="expandedElement = expandedElement === element ? null : element" [style.background]="element.status == 'טופל' ? 'darkseagreen': 'gainsboro'">
             </tr>
             <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
@@ -266,3 +271,13 @@
         <tfoot></tfoot>
     </table>
 </div>
+
+<!-- element.style {
+    background-color: gainsboro;
+} -->
+
+
+
+<!-- element.style {
+    background: forestgreen;
+} -->
