--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,16 @@ footer {
 .top-zindex {
     z-index: 9999999999999999 !important;
   }
- 
 .m-5 {
     margin: 1rem 0;
+}
+.mat-tooltip{
+    text-align: right;
+    font-size: larger !important;
+}
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    border-radius: 4px 4px 0 0;
+    padding: 0.1em 0.1em 0 0.1em;
 }
 .cdk-overlay-connected-position-bounding-box, 
 .cdk-overlay-pane{
@@ -803,10 +810,7 @@ tr.mat-footer-row {
     position: fixed;
     z-index: 9999999999  !important;
 }
-.mat-form-field-appearance-fill .mat-form-field-flex {
-    border-radius: 4px 4px 0 0;
-    padding: 0.1em 0.1em 0 0.1em;
-}
+
 .mt-10 {
     margin-bottom: 10px;
 }
@@ -1317,7 +1321,7 @@ ngx-material-timepicker-container,
     width: 80%;
 }
 .cdk-global-overlay-wrapper, .cdk-overlay-pane{
-    z-index: 999999999999999999999999999999999999999999999999 !important;
+    /* z-index: 999999999999999999999999999999999999999999999999 !important; */
 }
 .border-1{
     border: 1px solid !important;
